--- a/PMS-PropertyHapa.Staff/Views/Reports/LeaseReports.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Reports/LeaseReports.cshtml
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/Home/Index"><i data-feather="home"></i></a></li>
+                        <li class="breadcrumb-item"><a href="/Reports/Index"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Lease</li>
                         <li class="breadcrumb-item active">List</li>
                     </ol>
