--- a/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
@@ -21,91 +21,120 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="email-wrap bookmark-wrap">
-            <div class="row">
-                <div class="col-xl-12 col-md-12 box-col-12 ">
-                    <div class="email-right-aside bookmark-tabcontent contacts-tabs">
-                        <div class="card email-body radius-left">
-                            <div class="ps-0">
-                                <div class="tab-content">
-                                    <div class="tab-pane fade active show" id="pills-personal" role="tabpanel" aria-labelledby="pills-personal-tab">
-                                        <div class="card mb-0">
+    <div class="container-fluid my-4">
+        <div class="row">
+            <!-- Column 1: Properties Table (80% on lg screens) -->
+            <div class="col-xl-12 col-md-12 box-col-12">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <div class="right-side-header">
+                            <button class="btn btn-success" id="addAccountBtn">Add Account</button>
+                        </div>
+                    </div>
 
-                                            <div class="card">
-                                                <div class="card-header d-flex justify-content-between align-items-center">
-
-                                                    <div class="left-side-header">
-                                                        <div class="input-group">
-                                                            <span class="input-group-text" id="basic-addon1">
-                                                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                                    <g>
-                                                                        <g>
-                                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2753 2.71436C16.0029 2.71436 19.8363 6.54674 19.8363 11.2753C19.8363 16.0039 16.0029 19.8363 11.2753 19.8363C6.54674 19.8363 2.71436 16.0039 2.71436 11.2753C2.71436 6.54674 6.54674 2.71436 11.2753 2.71436Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M19.8987 18.4878C20.6778 18.4878 21.3092 19.1202 21.3092 19.8983C21.3092 20.6783 20.6778 21.3097 19.8987 21.3097C19.1197 21.3097 18.4873 20.6783 18.4873 19.8983C18.4873 19.1202 19.1197 18.4878 19.8987 18.4878Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                                                                        </g>
-                                                                    </g>
-                                                                </svg>
-
-                                                            </span>
-                                                            <input class="form-control" type="text" id="searchInput" placeholder="Search Account Type" aria-label="search" aria-describedby="basic-addon1">
-                                                        </div>
-                                                    </div>
-
-                                                    <div class="right-side-header">
-                                                        <button class="btn btn-success" id="newAccountTypeBtn">New Account Type</button>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-
-                                            <div class="card-body p-0">
-                                                <div class="table-responsive">
-                                                    <table class="table">
-                                                        <thead>
-                                                            <tr>
-                                                                <th scope="col" class="text-center tableHeaderbg">Account Name</th>
-                                                                <th scope="col" class="text-center tableHeaderbg">Action</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            @foreach (var item in Model?.OrderByDescending(x => x.AccountTypeId) ?? Enumerable.Empty<AccountType>())
-                                                            {
-                                                                <tr>
-                                                                    <td class="tableFontSize">@item.Type</td>
-                                                                    <td class="tableFontSize">
-                                                                        <div class="dropdown-basic">
-                                                                            <div class="dropdown">
-                                                                                <div class="btn-group mb-0">
-                                                                                    <button class="dropbtn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
-                                                                                    <div class="dropdown-content">
-                                                                                        <a class="btn btn-secondary" onclick="editAccountType(@item.AccountTypeId)">
-                                                                                            <i class="fa fa-edit"></i> Edit
-                                                                                        </a>
-                                                                                        <a class="btn btn-secondary" onclick="deleteAccountType(@item.AccountTypeId)">
-                                                                                            <i class="fa fa-trash"></i> Delete
-                                                                                        </a>
-                                                                                    </div>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </td>
-                                                                </tr>
-                                                            }
-                                                        </tbody>
-                                                    </table>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover text-center display" id="accountTypeTable">
+                                <thead class="table-dark">
+                                    <tr>
+                                        <th scope="col" class="text-center tableHeaderbg">Account Name</th>
+                                        <th scope="col" class="text-center tableHeaderbg">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    @* <div class="container-fluid">
+    <div class="email-wrap bookmark-wrap">
+    <div class="row">
+    <div class="col-xl-12 col-md-12 box-col-12 ">
+    <div class="email-right-aside bookmark-tabcontent contacts-tabs">
+    <div class="card email-body radius-left">
+    <div class="ps-0">
+    <div class="tab-content">
+    <div class="tab-pane fade active show" id="pills-personal" role="tabpanel" aria-labelledby="pills-personal-tab">
+    <div class="card mb-0">
+
+    <div class="card">
+    <div class="card-header d-flex justify-content-between align-items-center">
+
+    <div class="left-side-header">
+    <div class="input-group">
+    <span class="input-group-text" id="basic-addon1">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <g>
+    <g>
+    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2753 2.71436C16.0029 2.71436 19.8363 6.54674 19.8363 11.2753C19.8363 16.0039 16.0029 19.8363 11.2753 19.8363C6.54674 19.8363 2.71436 16.0039 2.71436 11.2753C2.71436 6.54674 6.54674 2.71436 11.2753 2.71436Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+    <path fill-rule="evenodd" clip-rule="evenodd" d="M19.8987 18.4878C20.6778 18.4878 21.3092 19.1202 21.3092 19.8983C21.3092 20.6783 20.6778 21.3097 19.8987 21.3097C19.1197 21.3097 18.4873 20.6783 18.4873 19.8983C18.4873 19.1202 19.1197 18.4878 19.8987 18.4878Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+    </g>
+    </g>
+    </svg>
+
+    </span>
+    <input class="form-control" type="text" id="searchInput" placeholder="Search Account Type" aria-label="search" aria-describedby="basic-addon1">
+    </div>
+    </div>
+
+    <div class="right-side-header">
+    <button class="btn btn-success" id="newAccountTypeBtn">New Account Type</button>
+    </div>
+
+    </div>
+    </div>
+
+    <div class="card-body p-0">
+    <div class="table-responsive">
+    <table class="table">
+    <thead>
+    <tr>
+    <th scope="col" class="text-center tableHeaderbg">Account Name</th>
+    <th scope="col" class="text-center tableHeaderbg">Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model?.OrderByDescending(x => x.AccountTypeId) ?? Enumerable.Empty<AccountType>())
+    {
+    <tr>
+    <td class="tableFontSize">@item.Type</td>
+    <td class="tableFontSize">
+    <div class="dropdown-basic">
+    <div class="dropdown">
+    <div class="btn-group mb-0">
+    <button class="dropbtn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
+    <div class="dropdown-content">
+    <a class="btn btn-secondary" onclick="editAccountType(@item.AccountTypeId)">
+    <i class="fa fa-edit"></i> Edit
+    </a>
+    <a class="btn btn-secondary" onclick="deleteAccountType(@item.AccountTypeId)">
+    <i class="fa fa-trash"></i> Delete
+    </a>
+    </div>
+    </div>
+    </div>
+    </div>
+    </td>
+    </tr>
+    }
+    </tbody>
+    </table>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div> *@
 </div>
 
 <div class="modal fade" id="newAccountTypeModal" tabindex="-1" aria-labelledby="accountTypeModalLabel" aria-hidden="true">
@@ -141,17 +170,41 @@
 <script>
     $(document).ready(function () {
 
-        $('#searchInput').on('input', function () {
-            var searchText = $(this).val().toLowerCase();
-            $('tbody tr').each(function () {
-                var accountType = $(this).find('td:first').text().toLowerCase();
-
-                if (accountType.includes(searchText)) {
-                    $(this).show();
-                } else {
-                    $(this).hide();
+        $('#accountTypeTable').DataTable({
+            "ajax": {
+                "url": "/AccountType/GetAccountTypes",
+                "type": "GET",
+                "dataSrc": ""
+            },
+            "columns": [
+                {
+                    "data": "Type",
+                    "className": "text-center"
+                },
+                {
+                    "className": "text-center",
+                    "data": "AccountTypeId",
+                    "render": function (data, type, row, meta) {
+                        return `
+                                <div class="dropdown-basic">
+                                    <div class="dropdown">
+                                        <div class="btn-group mb-0">
+                                            <button class="dropbtn btn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
+                                            <div class="dropdown-content">
+                                                <a class="btn btn-secondary" onclick="editAccountType(${data})">
+                                                    <i class="fa fa-edit"></i> Edit
+                                                </a>
+                                                <a class="btn btn-secondary" onclick="deleteAccountType(${data})">
+                                                    <i class="fa fa-trash"></i> Delete
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            `;
+                    }
                 }
-            });
+            ]
         });
 
 
