--- a/PMS-PropertyHapa.Staff/Views/Auth/UpdateProfile.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Auth/UpdateProfile.cshtml
@@ -46,7 +46,7 @@
                             <div class="row mb-2">
                                 <div class="profile-title">
                                     <div class="media">
-                                        <img src="" id="NewPictureBase64" class="rounded-circle" width="270" height="270" />
+                                        <img src="" id="userProfilePic" class="rounded-circle" width="270" height="270" />
                                         <div class="media-body">
                                             <h3 class="mb-1 f-20 txt-primary">@Model.UserName</h3>
                                             <p class="f-12">@Model.Email</p>
@@ -198,7 +198,7 @@
                     $('#UserName').val(response.result.UserName);
                     $('#Email').val(response.result.Email);
                     $('#PhoneNumber').val(response.result.PhoneNumber);
-                    $('#NewPictureBase64').attr('src', 'data:image;base64,' + response.result.NewPictureBase64);
+                    $('#userProfilePic').attr('src', 'data:image;base64,' + response.result.NewPictureBase64);
                     $('#Address').val(response.result.Address);
                     $('#Address2').val(response.result.Address2);
                     $('#Locality').val(response.result.Locality);
@@ -248,7 +248,6 @@
             var userName = localStorage.getItem('userName');
             formData.append('UserId', userId);
             formData.append('UserName', userName);
-           // formData.append('Currency', $("#Currency").val()));
             if (htmlContent) {
                 formData.append('TermsAndConditons', htmlContent);
             } else {
@@ -261,13 +260,12 @@
                 contentType: false,
                 processData: false,
                 success: function (response) {
-                    console.log(response);
                     var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
                     Toast.fire({ icon: 'success', title: 'Profile updated successfully' });
-                    var imageUrl = 'https://localhost:7178/wwwroot' + response.pictureUrl;
-                    $('#profile-picture-container').css('background-image', 'url(' + imagePath + ')');
-                    imageName = response.pictureUrl.split('/').pop();
-                    $('#imageName').text(imageName);
+                    // var imageUrl = 'https://localhost:7178/wwwroot' + response.pictureUrl;
+                    // $('#profile-picture-container').css('background-image', 'url(' + imageUrl + ')');
+                    // imageName = response.pictureUrl.split('/').pop();
+                    // $('#imageName').text(imageName);
                 },
                 error: function (xhr, status, error) {
                     var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
